# re-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
data/: cost_seg_defaults.json  macrs_tables.json
deal-analyzer/: analyze_deal.py
src/: config.py
src/api/: app.py  deps.py  schemas.py
src/api/routes/: analysis.py  comparison.py  investor.py  market.py  properties.py
src/dashboard/: app.py
src/data/: base.py  cache.py  census.py  climate.py  closing_costs.py  county_assessor.py  fbi_crime.py  fema.py  fred.py  geocode.py  greatschools.py  hud.py  macro.py  narrative.py  noaa_hazards.py  osm.py  redfin.py  rent_cache.py  rent_cli.py  rent_estimator.py  rentcast.py  resolver.py  sp500.py  usgs_seismic.py  walkscore.py  wildfire.py
src/engine/: appreciation.py  assumptions_builder.py  cashflow.py  debt.py  depreciation.py  disposition.py  insurance.py  irr.py  loan_products.py  maintenance.py  neighborhood.py  opportunity_cost.py  proforma.py  rehab.py  tax.py
src/models/: assumptions.py  db.py  investor.py  neighborhood.py  property.py  rehab.py  rent_estimate.py  results.py  smart_assumptions.py
tests/: conftest.py
tests/data/: test_rent_estimator.py
tests/engine/: test_appreciation.py  test_assumptions_builder.py  test_cashflow.py  test_debt.py  test_depreciation.py  test_disposition.py  test_insurance.py  test_irr.py  test_loan_products.py  test_maintenance.py  test_neighborhood.py  test_opportunity_cost.py  test_proforma.py  test_rehab.py  test_tax.py
(+3 files in other folders)
