[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "re-analyzer"
version = "0.1.0"
description = "Real Estate Investment Analysis Tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.26",
    "scipy>=1.12",
    "numpy>=1.26",
    "dash>=2.14",
    "plotly>=5.18",
    "yfinance>=0.2",
    "selenium>=4.16",
    "undetected-chromedriver>=3.5",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "ruff>=0.2",
    "mypy>=1.8",
    "ipykernel>=6.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
